--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.5.0",
-        "sweetalert2": "^7.29.2"
+        "chart.js": "^2.7.3",
+        "hchs-vue-charts": "^1.2.8",
+        "sweetalert2": "^7.29.2",
+        "vue-chartjs": "^3.4.0"
     }
 }
