Adding additional functionality

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
+    "/pdfjsWorker.js": "/pdfjsWorker.js",
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/pdfjsWorker.js": "/pdfjsWorker.js"
+    "/css/app.css": "/css/app.css"
 }
